# pixivdaily-rust

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
conf/: pixivdaily.conf  pixivdaily.service  pixivdaily.timer
src/: lib.rs  main.rs
