[package]
authors = ["i@k4yt3x.com"]
categories = ["command-line-utilities"]
description = "A Telegram bot that posts Pixiv's daily rankings for @pixiv_daily"
edition = "2021"
homepage = "https://github.com/k4yt3x/pixivdaily-rust"
keywords = ["pixiv", "telegram"]
license = "GPL-2.0-only"
name = "pixivdaily"
readme = "README.md"
repository = "https://github.com/k4yt3x/pixivdaily-rust"
version = "1.4.2"

[[bin]]
name = "pixivdaily"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
futures = "0.3"
image = "0.24"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"
slog-term = "2.9"
teloxide = { version = "0.11", features = ["auto-send", "macros", "throttle"] }
teloxide-core = "0.8"
tokio = { version = "1.23", features = ["full"] }
