[package]
authors = ["i@k4yt3x.com"]
categories = ["command-line-utilities"]
description = "A Telegram bot that posts Pixiv's daily rankings for @pixiv_daily"
edition = "2021"
homepage = "https://github.com/k4yt3x/pixivdaily-rust"
keywords = ["pixiv", "telegram"]
license = "GPL-2.0-only"
name = "pixivdaily"
readme = "README.md"
repository = "https://github.com/k4yt3x/pixivdaily-rust"
version = "1.5.0"

[[bin]]
name = "pixivdaily"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
image = "0.25"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.13", features = ["macros", "throttle"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
